--- a/todoApp/src/main/webapp/app/app.css
+++ b/todoApp/src/main/webapp/app/app.css
@@ -3,6 +3,7 @@
     font-weight: normal;
     font-style: normal;
     font-size: 24px;
+    max-width: 30px !important;
     /* Preferred icon size */
     display: inline-block;
     line-height: 1;
