--- a/todoApp/src/main/webapp/app/homepage/homepage.css
+++ b/todoApp/src/main/webapp/app/homepage/homepage.css
@@ -1,11 +1,17 @@
 #maincard {
-	min-width: 330px;
-	max-width: 600px;
+	min-width: 330px !important;
+	max-width: 600px !important;
+}
+
+md-card {
+	word-break: break-all;
+	max-width: 330;
 }
 
 .noteContent {
 	border-bottom: none !important;
 	outline: none;
+	word-break: break-all;
 }
 
 .done {
