Link Preview Complete
Showing link with image and Url loading link on new tab. Adding both
backend and front end.

--- a/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.css
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.css
@@ -21,3 +21,17 @@ md-card {
 	content: attr(placeholder);
 	display: block;
 }
+
+md-card-footer {	
+	border-top: solid 1px #E4E4E4;	
+	background-color: whitesmoke;
+}
+
+.linkpreview {
+	width: 40px !important;
+	height: 40px !important;
+}
+
+.linktext {
+	margin-left: 35px;
+}
