--- a/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.css
+++ b/todoApp/src/main/webapp/app/homepage/noteslist/noteslist.css
@@ -35,3 +35,12 @@ md-card-footer {
 .linktext {
 	margin-left: 35px;
 }
+
+.pinholder {
+	position: absolute;
+}
+
+.mypin {
+	position: relative;
+	left: 250px;
+}
